# libmpsse2

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_clang_format.sh
LibMPSSE/: ftdi_common.c  ftdi_common.h  ftdi_i2c.c  ftdi_i2c.h  ftdi_infra.c  ftdi_infra.h  ftdi_mid.c  ftdi_mid.h  ftdi_spi.c  ftdi_spi.h
LibMPSSE/Include/: libMPSSE_i2c.h  libMPSSE_spi.h
cmake/: Findlibftd2xx.cmake
ftd2xx/: install.sh
